# JBlux

./: .gitignore  AUTHORS  CREDITS  ChangeLog  README  build.xml
examples/: meleeweapon.itm
jblux-client/: build.xml  deploy  play
jblux-client/lib/: jinput.jar.lzma  liblwjgl.jnilib  linux_natives.jar.lzma  lwjgl.jar.pack.lzma  lwjgl_util.jar.lzma
jblux-client/nbproject/: project.xml
jblux-common/: build.xml
jblux-common/nbproject/: project.xml
jblux-maptester/: build.xml  play
jblux-maptester/nbproject/: project.xml
jblux-server/: INSTALL  Makefile  Makefile.in  aclocal.m4  autogen.sh  build.xml  configure  configure.ac  db.conf.example  rsyncignore  run.sh
jblux-server/nbproject/: project.xml
jblux-server/src/: base64.c  character.c  character.h  client.c  client.h  config.h.in  inventory.h  item.h  json.c  json.h  main.c  map.c  map.h  map_t.h  npc.c  npc.h  player.c  player.h  player_data.h  quest.c  quest.h  relation.c  types.h  world.c  world.h
jblux-server/src/com/jblux/server/: ClientThread.java  Clients.java  Maps.java  Server.java
jblux-server/src/db/: db.c  db.h  db_map_tbl.c  db_map_tbl.h  db_npc_tbl.c  db_npc_tbl.h  db_user_tbl.c  db_user_tbl.h  map_tbl.c  map_tbl.h  npc_tbl.c  npc_tbl.h  quest_tbl.c  quest_tbl.h  user_tbl.c  user_tbl.h
jblux-server/src/org/jblux/server/: ClientThread.java  Clients.java  GameWorld.java  Maps.java  Server.java
jblux-server/src/org/jblux/server/command/parsers/: AuthParser.java  CommandParser.java  MapParser.java
jblux-server/src/org/jblux/server/conf/: Settings.java
jblux-server/src/org/jblux/server/maps/: Map.java  Maps.java
jblux-server/src/org/jblux/server/sql/: DBManager.java
jblux-server/src/org/jblux/sql/: DBManager.java  ItemSqlTable.java  MapSqlTable.java  NpcTable.java  QuestTable.java  Settings.java  UserTable.java
jblux-server/src/rules/: combat.c  combat.h  constants.h
jblux-server/src/util/: coords.c  coords.h  jbm.c  jbm.h  jmath.c  jmath.h  json.c  json.h  relation.h
jblux-sql/: build.xml  inventory_table.sql  items_table.sql  map_table.sql
jblux-sql/nbproject/: project.xml
jblux-sql/tables/: inventory_table.sql  items_table.sql  map_entrances.sql  map_items_table.sql
jblux-suite/: build.xml
jblux-suite/nbproject/: ide-targets.xml  project.xml
jblux-xml/: build.xml
jblux-xml/nbproject/: project.xml
jblux_django/: deploy.sh  rsyncignore  settings.py.example  urls.py
jblux_django/apache/: django.wsgi
jblux_django/jblux/: admin.py  contexts.py  email.py  forms.py  models.py  news.py  polls.py  urls.py  util.py  views.py
jblux_django/templates/: 404.html  500.html
map-converter/: README  convert.py
new-server/: Makefile  README
new-server/src/: base64.c  base64.h  client.c  client.h  db.c  db.h  db_map_tbl.c  db_map_tbl.h  json.c  (+11 more)
(+178 files in other folders)
